--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>
         <a class="cta" href="https://github.com/"><button>Project</button></a>
     </header>
-    <p>Mariovlv</p>
+    <p>Your username</p>
     <div class="search-bar">
         <nav>
             <input type="text" placeholder="Stay clean..." class="search-text">
